Upgrade to JDK 25 and fix warnings